2007-03-26	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added MDP-120/MDP-130 GPIO patch from Jason P. Matthews.
	* Tweaked the GPIO patch to use TL880 driver code conventions.
	* Updated the AUTHORS and THANKS files.
	* Chip documentation updates.
	* Corrected a transposition of lines in the initialization messages.

2007-03-20	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Several new DPC registers (partially) documented.
	* Fixed a bug in the interrupt bh where interrupts would be disabled
	  any time the bh (bottom half/deferred interrupt handler) was called.
	* Three new APU registers partially documented.
	* Further reduced verbosity of interrupt handler messages (use the
	  debug module parameter to increase interrupt messages).

2007-03-17	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added memset tool.
	* Many improvements to tl880vpx.c.
	* Split VPX definitions from tl880.h to tl880vpx.h.
	* Reduced interrupt printk verbosity.
	* Other tweaks to the interrupt handler.
	* VPX improvements.
	* More chip info in tl880doc.txt.

2007-03-15	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added interrupt counting to tl880int.c.
	* Added interrupt status variables to tl880.h for MCU interrupts.
	* No longer disable TSD interrupts when receiving one.
	* Added DMA memory offset registers to tl880doc.txt (thanks to the PCI
	  traces provided by Stephen Marchant).
	* Added report of DMA offset to /proc/tl880.

2007-02-18	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Implemented more APU initialization.
	* Small updates to the chip documentation.

2007-01-31	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Started working on more VPX initialization.

2007-01-29	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added a status dump IOCTL.
	* Tweak implementation of /proc interface.

2007-01-28	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Check the (usually useless) return value of request_module.